--- a/src/app/shared/modules/audio-list/audio-list.component.html
+++ b/src/app/shared/modules/audio-list/audio-list.component.html
@@ -19,7 +19,7 @@
     <audio id="audioControls"
            controls
            autoplay
-           preload="auto"
+           preload="none"
            [attr.src]="selectedAudio.url">
       <source [src]="[selectedAudio.url]"
               type="audio/mpeg" />
