--- a/src/app/pages/exercise/exercise.component.html
+++ b/src/app/pages/exercise/exercise.component.html
@@ -4,20 +4,17 @@
              (nzSelectedIndexChange)="onSelectTab($event)">
     <nz-tab [nzTitle]="'HSK 1' | translate">
       <ng-template nz-tab>
-        <app-audio-list [audios]="vm.data"
-                        [isLoading]="vm.isLoading"></app-audio-list>
+        <app-audio-list [audios]="vm.data"></app-audio-list>
       </ng-template>
     </nz-tab>
     <nz-tab [nzTitle]="'HSK 2' | translate">
       <ng-template nz-tab>
-        <app-audio-list [audios]="vm.data"
-                        [isLoading]="vm.isLoading"></app-audio-list>
+        <app-audio-list [audios]="vm.data"></app-audio-list>
       </ng-template>
     </nz-tab>
     <nz-tab [nzTitle]="'HSK 3' | translate">
       <ng-template nz-tab>
-        <app-audio-list [audios]="vm.data"
-                        [isLoading]="vm.isLoading"></app-audio-list>
+        <app-audio-list [audios]="vm.data"></app-audio-list>
       </ng-template>
     </nz-tab>
     <nz-tab [nzTitle]="'HSK 4' | translate">
