--- a/src/app/shared/modules/audio-list/audio-list.component.scss
+++ b/src/app/shared/modules/audio-list/audio-list.component.scss
@@ -1,5 +1,6 @@
-@import '/src/styles.scss';
+@import '/src/variables.scss';
 @import 'animation';
+@import 'spinner';
 
 .delay {
   animation: appearance 0.25s ease 0.4s backwards;
