--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.scss
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.scss
@@ -1,4 +1,5 @@
 @import '/src/variables.scss';
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200;300;400;500;600;700;900&display=swap');
 
 .word {
   min-height: 63.77px;
@@ -10,9 +11,10 @@
   align-items: baseline;
   scroll-snap-align: start;
   &--name {
-    color: $primary-color;
+    color: $red;
     font-size: 18px;
     letter-spacing: 1px;
+    font-family: 'Noto Serif SC', serif;
   }
   &--pinyin {
     margin-left: 0.25rem;
