--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.scss
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200;300;400;500;600;700;900&display=swap');
 
 .word {
+  position: relative;
   min-height: 63.77px;
   height: calc(100% / 8);
   padding: 0.25rem 0.5rem 0;
@@ -49,7 +50,10 @@
     line-height: 100%;
   }
   .actions {
-    margin-left: auto;
+    opacity: 0;
+    position: absolute;
+    bottom: 0;
+    right: 0.5rem;
     .delete-button {
       color: $red;
       transition: $transition;
@@ -58,6 +62,13 @@
       opacity: 0.8;
       cursor: pointer;
     }
+    transition: $transition;
+  }
+  transition: $transition;
+}
+.word:hover {
+  .actions {
+    opacity: 1;
   }
 }
 // .word:last-child {
