--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
@@ -41,13 +41,13 @@
   <span class="word--define">{{ word.define | translate }}</span>
 
   <div class="actions">
-    <span nz-tooltip
+    <!-- <span nz-tooltip
           [nzTooltipTitle]="'ACTION.UPDATE' | translate"
           nz-icon
           nzType="edit"
           nzTheme="fill"
-          (click)="onEdit(word._id)"></span>
-    <span nz-tooltip
+          (click)="onEdit(word._id)"></span> -->
+    <!-- <span nz-tooltip
           [nzTooltipTitle]="'ACTION.DELETE' | translate"
           nz-popconfirm
           [nzPopconfirmTitle]="'CONFIRM_DELETE' | translate: { word: word.display + '[' + word.pinyin + ']' }"
@@ -58,6 +58,6 @@
           class="delete-button"
           nz-icon
           nzType="delete"
-          nzTheme="fill"></span>
+          nzTheme="fill"></span> -->
   </div>
 </li>
