--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -28,6 +28,4 @@
 <div class="main">
   <router-outlet></router-outlet>
 </div>
-<p class="copy-right">
-  Copyright 2022 - {{ year | date: 'yyyy' }} &copy; {{ 'FOOTER' | translate }}
-</p>
+<p class="copy-right">Copyright 2022 - {{ year | date : 'yyyy' }} &copy; {{ 'FOOTER' | translate }}</p>
