--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,13 @@
-<p class="playground"><i>{{'PLAYGROUND' | translate}}</i></p>
+<p class="playground">
+  <i>{{ 'PLAYGROUND' | translate }}</i>
+</p>
 <div class="cards--star">
   <div routerLink="/dictionary"
        class="card">
     <span>{{ 'DICTIONARY' | translate }}</span>
-    <p class="sub-title"><small>{{ 'STAR' | translate }}</small></p>
+    <p class="sub-title">
+      <small>{{ 'STAR' | translate }}</small>
+    </p>
   </div>
 </div>
 <div class="cards">
