--- a/src/app/pages/dictionary/dictionary.component.html
+++ b/src/app/pages/dictionary/dictionary.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="(vm$ | async) as vm">
+<ng-container *ngIf="vm$ | async as vm">
   <div class="top">
     <button [nzLoading]="vm.isLoading"
             [disabled]="vm.isLoading"
@@ -7,8 +7,7 @@
             (click)="onCreate()">
       <span nz-icon
             nzType="plus"
-            nzTheme="outline">
-      </span>
+            nzTheme="outline"> </span>
       <span>{{ 'ACTION.CREATE' | translate }}</span>
     </button>
     <nz-input-group class="search-input"
@@ -30,39 +29,42 @@
          [nzDropdownMenu]="menu">
       <ng-container [ngSwitch]="vm.filterType">
         <ng-container *ngSwitchCase="'all'">
-          <p>{{'VIEW_ALL' |translate}}</p>
+          <p>{{ 'VIEW_ALL' | translate }}</p>
         </ng-container>
         <ng-container *ngSwitchCase="'latest'">
-          <p>{{'LATEST' |translate}}</p>
+          <p>{{ 'LATEST' | translate }}</p>
         </ng-container>
         <ng-container *ngSwitchCase="'search'">
-          <p>{{'SEARCH_RESULTS' |translate}}</p>
+          <p>{{ 'SEARCH_RESULTS' | translate }}</p>
         </ng-container>
       </ng-container>
       <span nz-icon
-            nzType="down">
-      </span>
+            nzType="down"> </span>
     </div>
     <nz-dropdown-menu #menu="nzDropdownMenu">
       <ul nz-menu>
         <li [nzDisabled]="vm.filterType === 'latest'"
             (click)="onView8Latest()"
-            nz-menu-item>{{'LATEST' |translate}}</li>
+            nz-menu-item>
+          {{ 'LATEST' | translate }}
+        </li>
         <li [nzDisabled]="vm.filterType === 'all'"
             (click)="vm.filterType === 'all' ? $event.preventDefault() : showConfirm()"
-            nz-menu-item>{{ 'VIEW_ALL' | translate }}</li>
+            nz-menu-item>
+          {{ 'VIEW_ALL' | translate }}
+        </li>
         <nz-modal (nzOnCancel)="handleCancel()"
-                  (nzOnOk)="handleOk()">
-        </nz-modal>
+                  (nzOnOk)="handleOk()"> </nz-modal>
       </ul>
     </nz-dropdown-menu>
     <strong *ngIf="vm.isSuccess && vm.filterType !== 'latest'"
-            class="totals">{{ 'TOTALS' | translate: { totals: vm.total } }}</strong>
+            class="totals">{{
+      'TOTALS' | translate : { totals: vm.total }
+      }}</strong>
   </div>
   <app-dictionary-list [isLoading]="vm.isLoading"
                        [words]="vm.words"
                        [filterType]="vm.filterType"></app-dictionary-list>
 </ng-container>
-
 
 <app-dictionary-form></app-dictionary-form>
