--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,11 +11,13 @@
   </div>
 </div>
 <div class="cards">
-  <div routerLink="/curriculum"
+  <div [routerLink]="['/listening']"
+       (click)="audioService.changeAudioType('CURRICULUM')"
        class="card">
     <span>{{ 'CURRICULUM' | translate }}</span>
   </div>
-  <div routerLink="/exercise"
+  <div [routerLink]="['/listening']"
+       (click)="audioService.changeAudioType('EXERCISE')"
        class="card">
     <span>{{ 'EXERCISE' | translate }}</span>
   </div>
